--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -1,19 +1,37 @@
-<!-- 
-    Dont forget to put link ref to fonts here because storybook can't
-    get the fonts outside they index
--->
 <style type="text/css">
-  @font-face {
-    font-family: 'SfPro';
-    font-style: normal;
-    font-display: swap;
-    font-weight: 400;
-    src: url('styles/fonts/regular.woff2') format('woff2');
-  }
+    @font-face {
+        font-family: 'SfPro';
+        font-style: normal;
+        font-display: swap;
+        font-weight: 400;
+        src: url('assets/fonts/regular.woff2') format('woff2');
+    }
+    @font-face {
+        font-family: 'SfPro';
+        font-style: normal;
+        font-display: swap;
+        font-weight: 700;
+        src: url('assets/fonts/bold.woff2') format('woff2');
+    }
+    @font-face {
+        font-family: 'SfPro';
+        font-style: normal;
+        font-display: swap;
+        font-weight: 600;
+        src: url('assets/fonts/semibold.woff2') format('woff2');
+    }
+    @font-face {
+        font-family: 'SfPro';
+        font-style: normal;
+        font-display: swap;
+        font-weight: 300;
+        src: url('assets/fonts/thin.woff2') format('woff2');
+    }
+    @font-face {
+        font-family: 'SfPro';
+        font-style: normal;
+        font-display: swap;
+        font-weight: 900;
+        src: url('assets/fonts/black.ttf') format('truetype');
+    }
 </style>
-<link rel="preload" href="https://fonts.googleapis.com" />
-<link rel="preload" href="https://fonts.gstatic.com" crossorigin />
-<link
-  href="https://fonts.googleapis.com/css2?family=Saira:wght@100;200;300;400;500;600;700;800;900&display=swap"
-  rel="stylesheet"
-/>
